feat: transforma o app em SaaS multi-tenant Encaixe
Cada barbearia passa a ter loja própria (slug), dados isolados e
onboarding do dono. Inclui foto de barbeiro, sync de bloqueios só ao
salvar, lembretes no navegador sem custo e checkout Solo via Mercado Pago.

Co-authored-by: Cursor <cursoragent@cursor.com>